force-app/main/default/objects/Email_Message__c/fields/Account_List__c.field-meta.xml
<CustomField>
    <fullName>Account_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account List</label>
    <type>TextArea</type>
</CustomField>