force-app/main/default/objects/Email_Message__c/fields/Archived_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date_Time__c</fullName>
    <description>Populates if &quot;Archived&quot; = True</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Archived Date/Time</label>
    <type>DateTime</type>
</CustomField>