force-app/main/default/objects/Email_Message__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <description>This will hold the CC Address of the incoming EmailMessage</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will hold the CC Address of the incoming EmailMessage</inlineHelpText>
    <label>CC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>