force-app/main/default/objects/Email_Message__c/fields/HTML_Text_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Text_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HTML Text Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>