force-app/main/default/objects/Email_Message__c/fields/Ignore_from_Search__c.field-meta.xml
<CustomField>
    <fullName>Ignore_from_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will help in filtering out unwanted emails from being shown in the emails view page.</description>
    <inlineHelpText>This will help in filtering out unwanted emails from being shown in the emails view page.</inlineHelpText>
    <label>Ignore from Search</label>
    <type>Checkbox</type>
</CustomField>