force-app/main/default/objects/Email_Message__c/fields/Linked_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Linked_Accounts__c</fullName>
    <description>; separated list of account ids which are linked on email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Linked Accounts</label>
    <type>TextArea</type>
</CustomField>