force-app/main/default/objects/Email_Message__c/fields/Message_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Message_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>