force-app/main/default/objects/Email_Message__c/fields/Possible_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Possible_Group_Number__c</fullName>
    <description>This field will get the Group Number from the Email subject</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Possible Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>