force-app/main/default/objects/Email_Message__c/fields/Possible_Match__c.field-meta.xml
<CustomField>
    <fullName>Possible_Match__c</fullName>
    <description>This will hold the possible Account matches found from Subject/TextBody of incoming EmailMessage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will hold the possible Account matches found from Subject/TextBody of incoming EmailMessage.</inlineHelpText>
    <label>Possible Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>