force-app/main/default/objects/Email_Message__c/fields/Secured_Email_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Secured_Email_Date_Time__c</fullName>
    <label>Secured Email Date/Time</label>
    <type>DateTime</type>
</CustomField>