force-app/main/default/objects/Email_Message__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This will hold the Subject of the incoming EmailMessage</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will hold the Subject of the incoming EmailMessage</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>