force-app/main/default/objects/Email_Message__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>This will hold the To Address of the incoming EmailMessage</description>
    <inlineHelpText>This will hold the To Address of the incoming EmailMessage</inlineHelpText>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>